--- a/cover.css
+++ b/cover.css
@@ -37,7 +37,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   color: #fff;
-  text-shadow: 2px 2px 4px #000;
+  text-shadow: 0.15rem 0.15rem 0.3rem #000;
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
