--- a/resume.css
+++ b/resume.css
@@ -1,6 +1,6 @@
 body {
   height: 100%;
-  background-image: url("images/paper-texture.jpg");
+  background-image: url("images/paper-texture.png");
   background-repeat: repeat;
   background-size: initial;
   padding-bottom: 20px;
