--- a/resume.css
+++ b/resume.css
@@ -6,6 +6,10 @@ body {
   padding-bottom: 20px;
 }
 
+img {
+  image-orientation: from-image;
+}
+
 .navbar {
   margin-bottom: 20px;
   background-color: rgba(255, 255, 255, 0.3);
